# Vision-In-The-Loop

./: .gitignore  CMakeLists.txt  DE0_NANO_ESL.qsf  DisplayImage.cpp  README.md  README.txt  decoder.qsys  decoder.sopcinfo  esl_encoder_hw.tcl  esl_encoder_hw.tcl~  first_nios2_system.qsys  first_nios2_system.sopcinfo  hw_dev_tutorial.sdc  hw_dev_tutorial.sdc.bak  nios2_quartus2_project.asm.rpt  nios2_quartus2_project.bdf  nios2_quartus2_project.done  nios2_quartus2_project.fit.rpt  nios2_quartus2_project.fit.summary  nios2_quartus2_project.flow.rpt  nios2_quartus2_project.jdi  nios2_quartus2_project.map.rpt  nios2_quartus2_project.map.smsg  nios2_quartus2_project.map.summary  nios2_quartus2_project.pin  nios2_quartus2_project.qpf  nios2_quartus2_project.qsf  nios2_quartus2_project.qsf.bak  nios2_quartus2_project.sld  nios2_quartus2_project.sta.rpt  nios2_quartus2_project.sta.summary  nios2_quartus2_project_assignment_defaults.qdf  nios2_quartus2_project_time_limited.cdf  nios2_quartus2_project_time_limited.sof  quadrature_test_hw.tcl
JIWY_control/: CMakeLists.txt  main.cpp
JIWY_control/20_sim/pan/: PositionControllerPan.cpp  PositionControllerPan.h  PositionControllerPan_tokens.xml  test_PositionControllerPan.cpp
JIWY_control/20_sim/pan/common/: EulerAngles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h
JIWY_control/20_sim/tilt/: PositionControllerTilt.cpp  PositionControllerTilt.h  PositionControllerTilt_tokens.xml  test_PositionControllerTilt.cpp
JIWY_control/20_sim/tilt/common/: EulerAngles.h  MotionProfiles.cpp  xxfuncs.cpp  xxinteg.cpp  xxinverse.cpp  xxinverse.h  xxmodel.h  xxtypes.h
JIWY_control/_20_sim/pan/: PositionControllerPan.info
JIWY_control/_20_sim/pan/common/: EulerAngles.h  MotionProfiles.cpp  xxinteg.h  xxinverse.cpp  xxtypes.h
JIWY_control/_20_sim/tilt/: PositionControllerTilt.cpp  PositionControllerTilt.h  PositionControllerTilt.info
JIWY_control/_20_sim/tilt/common/: EulerAngles.cpp  MotionProfiles.h  xxfuncs.h  (+4 more)
JIWY_control/motor/: motor.cpp  motor.hpp
JIWY_control/opencv/: image_recognition.cpp  image_recognition.hpp
JIWY_control/serial/: uart.cpp  uart.hpp
JIWY_control/serial_com/: Serial.cpp  Serial.h
JIWY_control/timer/: timer.hpp
(+687 files in other folders)
